update popup label. closes #138 | fix button wrap. closes #139

--- a/less/tumblr.less
+++ b/less/tumblr.less
@@ -213,6 +213,10 @@ header {
             display: inline-block;
             float: left;
         }
+        i {
+            white-space: nowrap;
+            font-style: normal;
+        }
     }
     .mobile-prompt {
         color: #ccc;
